--- a/index.html
+++ b/index.html
@@ -7,11 +7,31 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <!-- カメラ -->
-  <video id="cam" autoplay playsinline muted></video>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 
-  <!-- Three.js -->
-  <canvas id="gl"></canvas>
+  <!-- AR Scene -->
+  <a-scene
+    id="ar-scene"
+    embedded
+    vr-mode-ui="enabled: false"
+    renderer="colorManagement: true; physicallyCorrectLights: true"
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+  >
+    <a-assets>
+      <a-asset-item id="cat-gltf" src="./models/cat2.glb"></a-asset-item>
+    </a-assets>
+    <a-marker id="hiro-marker" preset="hiro">
+      <a-entity
+        id="cat-entity"
+        gltf-model="#cat-gltf"
+        position="0 0 0"
+        rotation="0 0 0"
+        scale="0.6 0.6 0.6"
+      ></a-entity>
+    </a-marker>
+    <a-entity camera></a-entity>
+  </a-scene>
 
   <!-- UI -->
   <div id="hud">
@@ -35,17 +55,6 @@
       <div id="log"></div>
     </div>
   </div>
-
-
-  <script type="importmap">
-{
-  "imports": {
-    "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
-    "three/examples/jsm/": "https://unpkg.com/three@0.161.0/examples/jsm/"
-  }
-}
-</script>
-
 
 
   <script type="module" src="./main.js"></script>
