--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
     embedded
     vr-mode-ui="enabled: false"
     renderer="colorManagement: true; physicallyCorrectLights: true"
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; sourceWidth: 1280; sourceHeight: 960; displayWidth: 1280; displayHeight: 960; canvasWidth: 1280; canvasHeight: 960; maxDetectionRate: 30;"
   >
     <a-assets>
       <a-asset-item id="cat-gltf" src="./models/cat2.glb"></a-asset-item>
     </a-assets>
-    <a-marker id="hiro-marker" preset="hiro">
+    <a-marker
+      id="hiro-marker"
+      preset="hiro"
+      smooth="true"
+      smoothCount="12"
+      smoothTolerance="0.02"
+      smoothThreshold="6"
+    >
       <a-entity
         id="cat-entity"
         gltf-model="#cat-gltf"
