Switch AR marker to design pattern

--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
       <a-asset-item id="cat-gltf" src="./models/cat2.glb"></a-asset-item>
     </a-assets>
     <!--
-      Tracking marker (pattern marker).
-      この追跡マーカーとは独立して、装飾用猫アイコン (markers/design.png) は
-      名刺・紙面レイアウトではマーカーの外側（上部や横）に配置する想定。
-      装飾アイコンはAR認識には使わず、文脈補助のみを担う。
+      Original pattern marker for displaying the 3D model.
+      マーカー画像 (markers/design.png) と組み合わせて配置する想定。
     -->
     <a-marker
-      id="tracking-marker"
+      id="design-marker"
       type="pattern"
-      url="./markers/tracking-marker.patt"
+      url="./markers/design.ptt"
       smooth="true"
       smoothCount="12"
       smoothTolerance="0.02"
@@ -50,15 +48,15 @@
   <!-- UI -->
   <div id="hud">
     <!--
-      装飾用猫アイコン（AR認識に使わない）。
-      画面上の参考配置。名刺/紙面では追跡用マーカーの外側に置く想定。
+      オリジナルマーカー画像の参考表示。
+      画面上の参考配置。名刺/紙面ではマーカーとして利用する想定。
     -->
     <img
       id="design-icon"
       src="./markers/design.png"
       width="32"
       height="32"
-      alt="装飾用の猫アイコン（AR認識には使用しない）"
+      alt="オリジナルマーカー画像"
     />
     <div id="chatbar">
       <input id="q" type="text" placeholder="猫に質問してみて…" autocomplete="off" />
