Fix marker pattern file reference

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a-marker
       id="design-marker"
       type="pattern"
-      url="./markers/design.ptt"
+      url="./markers/design.patt"
       smooth="true"
       smoothCount="12"
       smoothTolerance="0.02"
